tests/NormalTests/paczka1/fuzzy1/62036230.err
Error in line 4: 1dYxdbQu5 A626 36,5
Error in line 13: 1dYxdbQu5 S709 59,2
Error in line 12: ATzmG7wAC S709 80,7
Error in line 22: A626 A271 85,7
